assets/less/main.less
/* ... */
/* ==========================================================================
Helper classes
========================================================================== */

/*
 * Image replacement
 */

 .ir {
  background-color: transparent;
  border: 0;
  overflow: hidden;
  /* IE 6/7 fallback */
  *text-indent: -9999px;
}

.ir:before {
  content: "";
  display: block;
  width: 0;
  height: 150%;
}

          /*
           * Hide from both screenreaders and browsers: h5bp.com/u
           */
/*
.hidden {
  display: none;
  visibility: hidden;
}
*/
/*
 * Hide only visually, but have it available for screenreaders: h5bp.com/v
 */

 .visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

/*
 * Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p
 */

 .visuallyhidden.focusable:active,
 .visuallyhidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
}

/*
 * Hide visually and from screenreaders, but maintain layout
 */

 .invisible {
  visibility: hidden;
}

/*
 * Clearfix: contain floats
 *
 * For modern browsers
 * 1. The space content is one way to avoid an Opera bug when the
 *    `contenteditable` attribute is included anywhere else in the document.
 *    Otherwise it causes space to appear at the top and bottom of elements
 *    that receive the `clearfix` class.
 * 2. The use of `table` rather than `block` is only necessary if using
 *    `:before` to contain the top-margins of child elements.
 */

 .clearfix:before,
 .clearfix:after {
  content: " "; /* 1 */
  display: table; /* 2 */
}

.clearfix:after {
  clear: both;
}

/*
 * For IE 6/7 only
 * Include this rule to trigger hasLayout and contain floats.
 */

 .clearfix {
  *zoom: 1;
}

/* ==========================================================================
EXAMPLE Media Queries for Responsive Design.
These examples override the primary ('mobile first') styles.
Modify as content requires.
========================================================================== */
.notOnMobilie{
}

@media only screen and (max-width: 1236px) {
  .ui.page.grid.page-top{
    width: 100vw !important;
    left: 0 !important;
  }
  .notOnMobilie{display: none;}
}

@media only screen and (max-width: 860px) {
  .about-slider-wrapper{
    width: 100%;
    background-color: rgba(0,0,0,.3);
    .des-image{
      display: none;
    }
    .slider-pro{
      width: 100%;
    }
  }
  .alpha{
    padding-top: 7rem;
  }
}

@media only screen and (max-width: 600px) {
  .ui.page.grid{padding:0!important}
  .ui.grid.imhof-family{padding:0;}
  .right.floated.column.soldOut_column{
    float: none;
    margin-top: 7rem;
    display: block;
    left: 0;
    right: 0;
    margin-right: auto;
  }
  .ui.grid > [class*="two column"].row > .column {
    width: 100% !important;
  }
}

@media only screen and (min-width: 992px) {
  .ui.page.grid > .container{
    width:992px !important;
    margin:-1rem auto -1rem !important;
    padding:0 !important;
  }

  .category-selection{
    float:left;
  }

  .subnav{
    li{
      float:left;
      margin:0 1rem 0 0;
    }
  }
}
.ui.grid.top-bg{
  width:100%;
  display:block;
  background:url('/images/headers/ws.jpg') no-repeat center top;
  height:400px;
  margin-top:70px;
}

@media only screen and (min-width: 1236px){


  .ui.page.grid > .container{
    width:936px !important;
    margin:-1rem auto -1rem !important;
    padding:0 !important;
  } 



  .page-nav{
    .menu-toggle{display:none;}

    .nav{
      display:block; // visible

      margin-top:0;

    }
  }


  .nav{




    .item{
      width:25%;
      height:70px;
      background:white;
      p{
        a{
          span{
            margin:0;
          }
        }
      }

      .bg{
        display:block;
        position:absolute;
        bottom:0;
      }

    }
  }

  .cart-icon{
    position:fixed;
    top:0;
    right:0;
    margin-right:2rem;
    z-index:1000;
  }

  .cart-in{
    display:none;
  }

  .cart-out{
    display:block;
  }

}

@media only screen and (min-width: 1436px) {
  .ui.page.grid > .container{
    width:1236px !important;
    margin:-1rem auto -1rem !important;
    padding:0 !important;
  } 
}
@media only screen and (min-width: 1920px) {
  .ui.page.grid > .container{
    width:1620px !important;
    margin:-1rem auto -1rem !important;
    padding:0 !important;
  } 
}


@media print,
(-o-min-device-pixel-ratio: 5/4),
(-webkit-min-device-pixel-ratio: 1.25),
(min-resolution: 120dpi) {
  /* Style adjustments for high resolution devices */
}

/* ==========================================================================
Print styles.
Inlined to avoid required HTTP connection: h5bp.com/r
========================================================================== */

@media print {
  * {
    background: transparent !important;
    color: #000 !important; /* Black prints faster: h5bp.com/s */
    box-shadow: none !important;
    text-shadow: none !important;
  }

  a,
  a:visited {
    text-decoration: underline;
  }

  a[href]:after {
    content: " (" attr(href) ")";
  }

  abbr[title]:after {
    content: " (" attr(title) ")";
  }

  /*
   * Don't show links for images, or javascript/internal links
   */

   .ir a:after,
   a[href^="javascript:"]:after,
   a[href^="#"]:after {
    content: "";
  }

  pre,
  blockquote {
    border: 1px solid #999;
    page-break-inside: avoid;
  }

  thead {
    display: table-header-group; /* h5bp.com/t */
  }

  tr,
  img {
    page-break-inside: avoid;
  }
}

.agenda-body {
  .ui.dividing.header {
    margin-top: 1rem;
  }
}

.citation.hide {
  display: none;
}
/* ... */

